# oneai-daily-wechat

./: .env.example  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  push-wechat-draft.yml
content/daily/: 2026-07-02-daily-briefing.md  2026-07-03-daily-briefing.md  2026-07-04-daily-briefing.md  2026-07-05-daily-briefing.md  2026-07-06-daily-briefing.md  2026-07-07-daily-briefing.md  2026-07-08-daily-briefing.md  2026-07-09-daily-briefing.md  2026-07-10-daily-briefing.md  2026-07-11-daily-briefing.md  2026-07-12-daily-briefing.md
content/daily/assets/: CARD_ICON_GUIDELINES.md
content/posts/: 2026-07-01-ai-hiring-compliance.md  2026-07-01-oneai-daily.md  2026-07-01-sample.md
scripts/: convert_today_images.py  generate_article_images.py  local_publish.sh  new_post.py  push_wechat_draft.py
src/wechat_publisher/: __init__.py  config.py  publish.py  renderer.py  wechat_client.py
templates/: wechat.html
